# MTRX5700_Ass_3

./: .gitignore  frames.gv
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/a3_icp/: .catkin  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
devel/.private/gmapping/: .catkin  local_setup.sh  setup.sh
devel/.private/gmapping_q2/: .catkin  local_setup.sh
devel/.private/landmarks_msg/: .catkin  local_setup.sh
devel/.private/realsense_gazebo_plugin/: .catkin  .rosinstall  setup.sh
devel/lib/a3_icp/: icp_main  (+2 more)
logs/a3_icp/: build.check.013.log.stderr  build.make.000.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.046.log.stderr  build.make.050.log.stderr  build.make.052.log.stderr  build.make.063.log.stderr  build.make.068.log.stderr  build.make.074.log.stderr  build.make.079.log.stderr  build.make.081.log.stderr  build.make.085.log.stderr  build.make.090.log.stderr
results_folder/: stamped_groundtruth.txt  stamped_traj_estimate.txt
src/gmapping_q2/: CMakeLists.txt
src/icp/: CMakeLists.txt  package.xml
src/icp/include/: icp_data_loader.hpp
src/icp/launch/: icp_run.launch  ur5e_ass2_icp.launch
src/icp/src/: get_laser_data.cpp  icp_data_loader.cpp  icp_main.cpp  plot_realtime_data.py  quaternion_to_rotation_matrix.cpp
src/question_2/: config_rviz.rviz
(+330 files in other folders)
